# blit

./: CMakeLists.txt  README.md
examples/: demo.cpp  demo2.cpp
include/: window.hpp
src/: window.cpp
